--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 Flask==2.3.3
-flask-sqlalchemy==3.0.5
-flask-migrate==4.0.4
-flask-login==0.6.2
-flask-wtf==1.1.1
-Jupyter==1.0.0
-notebook==7.0.3
-ipykernel==6.25.2
-numpy==1.26.0
-pandas==2.1.2
-matplotlib==3.8.0
-seaborn==0.13.0
+flask-sqlalchemy==3.1.1
+flask-migrate==4.0.5
+flask-login==0.6.3
+flask-wtf==1.1.2
+flask-cors==5.0.0
+Jupyter==1.1.1
+notebook==7.1.0
+ipykernel==6.26.0
+numpy==1.26.1
+pandas==2.1.3
+matplotlib==3.8.1
+seaborn==0.13.1
+tensorflow==2.17.1
+# pickle==0.0.11
